[FIX] Fix text overflow

--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.scss
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.scss
@@ -13,3 +13,7 @@
     padding: 10px;
     border: 1px solid #ccc;
 }
+
+.no-overflow {
+    word-wrap: break-word;
+}
